# xpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  bla.sty  build.sh
src/: formatter.cc  interp.cc  main.cc  parser.cc  parser.h
tex/: lib.xpp
